<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.recteducation.MainActivity"
    android:theme="@style/MyTheme">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center_horizontal"
        android:lines="2"
        android:singleLine="false"
        android:text="@string/title"
        android:textSize="24sp"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:lines="2"
        android:singleLine="false"
        android:text="@string/title1"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/a"
        android:hint="@string/a"
        android:importantForAutofill="no"
        <!--tools:ignore="TextFields"--> 
              />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/b"
        android:hint="@string/b"
        <!--tools:ignore="Autofill,TextFields"-->
    />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/c"
        android:hint="@string/c"
        <!--android:autofillHints=""-->
        tools:ignore="TextFields" />

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/run"
        android:onClick="run"
        android:text="@string/calculate"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        />

    <TextView

        android:id="@+id/res"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:textSize="20sp" />

    
</LinearLayout>
